Tests/CompilerTests/negative/no-conversion.hylo
//! no-std

fun main() {
  _ = () as {Void, Void}
}
